--- a/requirements.txt
+++ b/requirements.txt
@@ -1,99 +1,30 @@
-aiofiles==23.1.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-altair==5.0.1
 anyio==3.7.0
-async-timeout==4.0.2
 asyncio==3.4.3
-attrs==23.1.0
 bidict==0.22.1
-blinker==1.6.2
-cachetools==5.3.1
-certifi==2023.5.7
-charset-normalizer==3.1.0
 click==8.1.3
-contourpy==1.1.0
-cycler==0.11.0
-decorator==5.1.1
 dnspython==2.3.0
 eventlet==0.33.3
 fastapi==0.97.0
-ffmpy==0.3.0
-filelock==3.12.2
-flet==0.7.4
-flet-core==0.7.4
-fonttools==4.40.0
-frozenlist==1.3.3
-fsspec==2023.6.0
-gitdb==4.0.10
-GitPython==3.1.31
-gradio==3.35.2
-gradio_client==0.2.7
 greenlet==2.0.2
 h11==0.14.0
-httpcore==0.16.3
-httpx==0.23.3
-huggingface-hub==0.15.1
+httptools==0.5.0
 idna==3.4
-importlib-metadata==6.6.0
-Jinja2==3.1.2
-jsonschema==4.17.3
-kiwisolver==1.4.4
-linkify-it-py==2.0.2
-markdown-it-py==2.2.0
-MarkupSafe==2.1.3
-matplotlib==3.7.1
-mdit-py-plugins==0.3.3
-mdurl==0.1.2
-multidict==6.0.4
-netifaces==0.10.6
 numpy==1.25.0
-oauthlib==3.2.2
-orjson==3.9.1
-packaging==23.1
 pandas==2.0.2
-Pillow==9.5.0
-protobuf==4.23.3
-pyarrow==12.0.1
 pydantic==1.10.9
-pydeck==0.8.1b0
-pydub==0.25.1
-Pygments==2.15.1
-Pympler==1.0.1
-pyparsing==3.0.9
-pyrsistent==0.19.3
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 python-engineio==4.4.1
-python-multipart==0.0.6
 python-socketio==5.8.0
 pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
-repath==0.9.0
-requests==2.31.0
-rfc3986==1.5.0
-rich==13.4.2
-semantic-version==2.10.0
 six==1.16.0
-smmap==5.0.0
 sniffio==1.3.0
-socketio==0.2.1
 starlette==0.27.0
-streamlit==1.23.1
-tenacity==8.2.2
-toml==0.10.2
-toolz==0.12.0
-tornado==6.3.2
-tqdm==4.65.0
 typing_extensions==4.6.3
 tzdata==2023.3
-tzlocal==4.3
-uc-micro-py==1.0.2
-urllib3==2.0.3
 uvicorn==0.22.0
-validators==0.20.0
-watchdog==2.3.1
+uvloop==0.17.0
+watchfiles==0.19.0
 websocket-client==1.6.0
-websockets==10.4
-yarl==1.9.2
-zipp==3.15.0
+websockets==11.0.3
