--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
+aiofiles==23.1.0
 anyio==3.7.0
 asyncio==3.4.3
 bidict==0.22.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
 click==8.1.3
 dnspython==2.3.0
 eventlet==0.33.3
 fastapi==0.97.0
+fastapi-socketio==0.0.10
 greenlet==2.0.2
 h11==0.14.0
 httptools==0.5.0
@@ -18,11 +22,13 @@ python-engineio==4.4.1
 python-socketio==5.8.0
 pytz==2023.3
 PyYAML==6.0
+requests==2.31.0
 six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.6.3
 tzdata==2023.3
+urllib3==2.0.3
 uvicorn==0.22.0
 uvloop==0.17.0
 watchfiles==0.19.0
