--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,6 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - APP_HOST=127.0.0.1
+      - APP_HOST=0.0.0.0
       - APP_PORT=5000
-      - APP_PUBLIC_URL='http://127.0.0.1:5000'
+      - APP_PUBLIC_URL=http://0.0.0.0:5000
